Netlify redirect experiments

--- a/blogposts/relationships-and-rules-a-simple-philosophy.mdx
+++ b/blogposts/relationships-and-rules-a-simple-philosophy.mdx
@@ -42,7 +42,7 @@ Here's [the end product we were built](https://consentcheck.wellington.govt.nz/)
 
 I’d like to acknowledge quite a number of people who have been influential and inspiring in their various ways and that got me to the start of this writing project:
    * Nadia Webster, also the instigator of this project I’ll be documenting. She shaped my thinking around what innovation actually looks like in the context of these institutions. 
-   * Tom Barraclough and Curtis Barnes, my fellow researchers on the NZ [Legislation-as-code](https://hamish.dev/research/lac) report. 
+   * Tom Barraclough and Curtis Barnes, my fellow researchers on the NZ [Legislation-as-code](https://hamish.dev/research/lac/) report. 
    * The Service Innovation Lab crew.
    * Pia Andrews, the friend who is “endless hope” embodied.
    * Brigette Metzler, the friend who tells you nicely you’re doing it wrong to your face. GOLD.
