--- a/blogposts/test-blog-post.mdx
+++ b/blogposts/test-blog-post.mdx
@@ -18,4 +18,4 @@ It was an interesting town from a planning perspective. Originally two towns, Rh
 
 Suffice to say however there were tensions, to the point that the northern boundary of Government town (known as North Street of course) became the point where the towns met and naturally the planners refused to align any of the connecting streets (see pic above).  
 
-Anyway I'm rambling, I just want to say that I'm going to be doing a lot of writing about rules and a thing call "Open Interpretation". Hopefully lots of code experiments also. This is on the back of a research project titled ["Legislation as Code"](https://hamish.dev/research/lac) and [a project](https://consentcheck.wellington.govt.nz/) at the Wellington City Council that interpreted their district plan in a [#RulesAsCode](https://twitter.com/search?q=%23RulesAsCode) fashion. It all raised a lot of questions, possibilities and a desire to dig into things further. 
+Anyway I'm rambling, I just want to say that I'm going to be doing a lot of writing about rules and a thing call "Open Interpretation". Hopefully lots of code experiments also. This is on the back of a research project titled ["Legislation as Code"](https://hamish.dev/research/lac/) and [a project](https://consentcheck.wellington.govt.nz/) at the Wellington City Council that interpreted their district plan in a [#RulesAsCode](https://twitter.com/search?q=%23RulesAsCode) fashion. It all raised a lot of questions, possibilities and a desire to dig into things further. 
