--- a/blogposts/how-to-show-your-working.mdx
+++ b/blogposts/how-to-show-your-working.mdx
@@ -7,7 +7,7 @@ categories: [ Rules as code, Open interpretation ]
 image: /assets/images/howtoshowyouroworking.jpg
 imagealt: "How to show your working"
 excerpt: What if we had already had a bunch of enthusiastic friends that included the subject matter experts, lawyers and policy advisors?
-featured: true
+featured: false
 ---
 
 
